fixes #3874. site icon was cut off in profile dashboard

--- a/web/stylus/styles/icon.styl
+++ b/web/stylus/styles/icon.styl
@@ -157,7 +157,7 @@
 
   &.site.READ
     background-image url('/web/images/logo/databrary-small.svg')
-    background-position-x 0
+    background-position 0px center
         
   &.access0
     background-image url('/web/icons/private.svg')
